--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,13 @@ version = "2025.1.0"
 description = "reliable agnostic test runner"
 requires-python = ">=3.11"
 dependencies = [
+    "behave>=1.3.3",
     "click>=8.2.1",
+    "pytest>=8.4.2",
     "rich>=14.1.0",
     "robotframework>=7.3.2",
     "ruff>=0.12.12",
+    "typer>=0.17.4",
 ]
 
 [tool.poetry.workspace]
